--- a/.github/workflows/daily_message.yml
+++ b/.github/workflows/daily_message.yml
@@ -1,8 +1,8 @@
 name: Daily Telegram Message
 
 on:
-  schedule:
-    - cro: '* * * * *'  # هر روز ساعت 9 صبح UTC اجرا میشه
+#  schedule:
+#    - cron: '30 14 * * *'  # هر روز ساعت 9 صبح UTC اجرا میشه
   workflow_dispatch:
 
 jobs:
